<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:id="@+id/first_fragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/act1_label"
            android:textAlignment="center"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/act1_hint" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input"
            android:layout_above="@+id/button"
            app:srcCompat="@drawable/fumo_clownpiece_graph" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/act1_button"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

</FrameLayout>