<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/second_fragment"
    tools:context=".SecondFragment">
    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/act_2_img_height"
            app:srcCompat="@drawable/touhou_suzunaan_logo" />
        <TextView
            android:textAlignment="center"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/act2_label" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/act_2_input_height"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/act2_hint" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:height="80dp"
            android:text="@string/act2_button"
            android:layout_alignParentBottom="true"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>